software/astrocom/HA_on_off_light/build/log/idf_py_stdout_output_20496
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\Stephen\esp\esp-idf\examples\zigbee\light_sample\HA_on_off_light\build\bootloader\esp-idf\esptool_py && C:\Users\Stephen\.espressif\python_env\idf5.1_py3.11_env\Scripts\python.exe C:/Users/Stephen/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/build/bootloader/bootloader.bin"
Bootloader binary size 0x5310 bytes. 0x2cf0 bytes (35%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj 
ccache C:\Users\Stephen\.espressif\tools\riscv32-esp-elf\esp-12.2.0_20230208\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.1.1-dirty\" -DRCP_COMPILE_DEFINE="\"zigbee-e088c3766b-e088c3766b-0.5.4-2024-03-12 20:19:27 UTC\"" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/build/config -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/include -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/main -IC:/Users/Stephen/esp/esp-idf/components/newlib/platform_include -IC:/Users/Stephen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Stephen/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/Stephen/esp/esp-idf/components/freertos/esp_additions/include/freertos -IC:/Users/Stephen/esp/esp-idf/components/freertos/esp_additions/include -IC:/Users/Stephen/esp/esp-idf/components/freertos/esp_additions/arch/riscv/include -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/include -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/include/soc/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/port/esp32c6/. -IC:/Users/Stephen/esp/esp-idf/components/esp_hw_support/port/esp32c6/private_include -IC:/Users/Stephen/esp/esp-idf/components/heap/include -IC:/Users/Stephen/esp/esp-idf/components/log/include -IC:/Users/Stephen/esp/esp-idf/components/soc/include -IC:/Users/Stephen/esp/esp-idf/components/soc/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/soc/esp32c6/include -IC:/Users/Stephen/esp/esp-idf/components/hal/esp32c6/include -IC:/Users/Stephen/esp/esp-idf/components/hal/include -IC:/Users/Stephen/esp/esp-idf/components/hal/platform_port/include -IC:/Users/Stephen/esp/esp-idf/components/esp_rom/include -IC:/Users/Stephen/esp/esp-idf/components/esp_rom/include/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/esp_rom/esp32c6 -IC:/Users/Stephen/esp/esp-idf/components/esp_common/include -IC:/Users/Stephen/esp/esp-idf/components/esp_system/include -IC:/Users/Stephen/esp/esp-idf/components/esp_system/port/soc -IC:/Users/Stephen/esp/esp-idf/components/esp_system/port/include/riscv -IC:/Users/Stephen/esp/esp-idf/components/esp_system/port/include/private -IC:/Users/Stephen/esp/esp-idf/components/riscv/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/include/apps -IC:/Users/Stephen/esp/esp-idf/components/lwip/include/apps/sntp -IC:/Users/Stephen/esp/esp-idf/components/lwip/lwip/src/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/freertos/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/Stephen/esp/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/Stephen/esp/esp-idf/components/esp_event/include -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/components/esp_idf_lib_helpers -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/components/i2cdev -IC:/Users/Stephen/esp/esp-idf/components/driver/include -IC:/Users/Stephen/esp/esp-idf/components/driver/deprecated -IC:/Users/Stephen/esp/esp-idf/components/driver/analog_comparator/include -IC:/Users/Stephen/esp/esp-idf/components/driver/dac/include -IC:/Users/Stephen/esp/esp-idf/components/driver/gpio/include -IC:/Users/Stephen/esp/esp-idf/components/driver/gptimer/include -IC:/Users/Stephen/esp/esp-idf/components/driver/i2c/include -IC:/Users/Stephen/esp/esp-idf/components/driver/i2s/include -IC:/Users/Stephen/esp/esp-idf/components/driver/ledc/include -IC:/Users/Stephen/esp/esp-idf/components/driver/mcpwm/include -IC:/Users/Stephen/esp/esp-idf/components/driver/parlio/include -IC:/Users/Stephen/esp/esp-idf/components/driver/pcnt/include -IC:/Users/Stephen/esp/esp-idf/components/driver/rmt/include -IC:/Users/Stephen/esp/esp-idf/components/driver/sdio_slave/include -IC:/Users/Stephen/esp/esp-idf/components/driver/sdmmc/include -IC:/Users/Stephen/esp/esp-idf/components/driver/sigma_delta/include -IC:/Users/Stephen/esp/esp-idf/components/driver/spi/include -IC:/Users/Stephen/esp/esp-idf/components/driver/temperature_sensor/include -IC:/Users/Stephen/esp/esp-idf/components/driver/touch_sensor/include -IC:/Users/Stephen/esp/esp-idf/components/driver/twai/include -IC:/Users/Stephen/esp/esp-idf/components/driver/uart/include -IC:/Users/Stephen/esp/esp-idf/components/driver/usb_serial_jtag/include -IC:/Users/Stephen/esp/esp-idf/components/esp_pm/include -IC:/Users/Stephen/esp/esp-idf/components/esp_ringbuf/include -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/managed_components/espressif__esp-zboss-lib/include -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/managed_components/espressif__esp-zigbee-lib/include -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/managed_components/espressif__led_strip/include -IC:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/managed_components/espressif__led_strip/interface -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=C:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light=. -fmacro-prefix-map=C:/Users/Stephen/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -Wno-strict-prototypes -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\astrocom.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/astrocom.c.obj -c C:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/main/astrocom.c
C:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/main/astrocom.c: In function 'timer_isr':
C:/Users/Stephen/esp/esp-idf/examples/zigbee/light_sample/HA_on_off_light/main/astrocom.c:501:7: error: expected expression before '/' token
  501 |     }*/
      |       ^
ninja: build stopped: subcommand failed.
